<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtChatNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/chat_normal"
        android:textColor="@color/color_text_next"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fab_chatNormal"
        app:layout_constraintRight_toLeftOf="@+id/fab_chatNormal"
        app:layout_constraintTop_toTopOf="@+id/fab_chatNormal"
        app:layout_constraintVertical_bias="0.571" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_secretChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/color_toolbar"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab_openChat"
        app:layout_constraintLeft_toLeftOf="@+id/fab_openChat"
        app:layout_constraintRight_toRightOf="@+id/fab_openChat"
        app:srcCompat="@drawable/chat_secret" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/color_toolbar"

            android:elevation="3dp"
            android:theme="?attr/actionBarTheme"
            android:titleTextColor="@color/color_selected_tab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/color_toolbar"
            android:elevation="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/color_selected_tab"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed">


        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/mainPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            app:layout_constraintVertical_bias="1.0">

        </android.support.v4.view.ViewPager>

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/addBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:background="@color/color_add_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:clickable="true"
        android:layout_marginBottom="0dp">
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        app:backgroundTint="@color/color_toolbar"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/add_user" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_chatNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/color_toolbar"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/fab"
        app:layout_constraintRight_toRightOf="@+id/fab"
        app:srcCompat="@drawable/chat_normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_openChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/color_toolbar"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab_chatNormal"
        app:layout_constraintLeft_toLeftOf="@+id/fab_chatNormal"
        app:layout_constraintRight_toRightOf="@+id/fab_chatNormal"
        app:srcCompat="@drawable/chat__open" />

    <TextView
        android:id="@+id/txtChatOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/chat_open"
        android:textColor="@color/color_text_next"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fab_openChat"
        app:layout_constraintRight_toLeftOf="@+id/fab_openChat"
        app:layout_constraintTop_toTopOf="@+id/fab_openChat"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/txtChatSecret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/chat_secret"
        android:textColor="@color/color_text_next"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fab_secretChat"
        app:layout_constraintRight_toLeftOf="@+id/fab_secretChat"
        app:layout_constraintTop_toTopOf="@+id/fab_secretChat" />


</android.support.constraint.ConstraintLayout>